samples/_failures_safe/1761075762_be4c3d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1d0c6be6.c: In function ‘tokenize’:
./samples/SAFE/__tmp_1d0c6be6.c:184:13: error: expected expression at end of input
  184 |             invalid_token.value[1] =
      |             ^~~~~~~~~~~~~
./samples/SAFE/__tmp_1d0c6be6.c:184:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1d0c6be6.c:184:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1d0c6be6.c:184:13: error: expected declaration or statement at end of input
